force-app/main/default/objects/Property_Owners__c/Property_Owners__c.object-meta.xml
<CustomObject>
    <description>property owner is the Seller</description>
    <label>Property Owner</label>
    <nameField>
        <label>Property Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>