force-app/main/default/objects/Property_Owners__c/fields/Email_id__c.field-meta.xml
<CustomField>
    <fullName>Email_id__c</fullName>
    <description>Seller&apos;s Email Id</description>
    <inlineHelpText>Seller&apos;s Email Id</inlineHelpText>
    <label>Email id</label>
    <type>Email</type>
</CustomField>