force-app/main/default/objects/Property_Owners__c/fields/Number_of_Properties_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Properties_Available__c</fullName>
    <description>Total no of properties of this Seller available</description>
    <inlineHelpText>Total no of properties of this Seller available</inlineHelpText>
    <label>Number of Properties Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>