force-app/main/default/objects/Property_Owners__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Seller&apos;s Phone Number</description>
    <inlineHelpText>Seller&apos;s Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>